# wickedjukebox

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  AndroidManifest.xml  Dockerfile  MANIFEST.in  Makefile  Pipfile  README  README.rst  TODO.md  Vagrantfile  alembic.ini  alembic.ini.dist  arbiter.py  bootstrap-user.sh  bootstrap.sh  composer.json  config.ini  config.ini.dist  configuration.html  db_container.sh  docker-entrypoint.bash  docker-run-dev.bash  docker-run-mysql.bash  docker-run-shell.bash  docker-run.bash  fabfile.py  fabric.yaml  genindex.html  genreBrowser.py  getByGenre.sh  gst-tester-simple.py  gst-tester.py  index.html  installation.html  jdtest.py  jukebox-admin.py  logging.ini  (+20 more)
.devcontainer/: devcontainer.json  docker-compose.yml  init.bash
.doctrees/: configuration.doctree  environment.pickle  index.doctree  installation.doctree  maintenance.doctree  usage.doctree
_sources/: configuration.rst.txt  index.rst.txt
alembic/: env.py  script.py.mako
appendix/: mpd-in-docker.html
application/: Bootstrap.php
config/: application.config.php
daemon/: INSTALL  TODO  db.ini.dist  demon.py  logging.ini  model.py  mpdclient.py  player.py  plparser.py  util.py  wjb.py
data/: database.mysql.sql  database.sql  database.sqlite.sql  localdata.sql.distrib  smarttest.sql
db_schema/: database.mysql.sql  database.sqlite.sql
demon/: dbmodel.py  gamint.py  model.py  player.py  plparser.py  run.sh  util.py  wickedjukebox.py  wjb.tac  xmlrpc.py
doc/: conf.py  index.rst  installation.rst  maintenance.rst  usage.rst
docker/: startup.bash
(+797 files in other folders)
